Projects/Kubernetes-Practice-NextOpsCourse/Chapter-3/sample_ingress_cntrlr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-lb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app-lb
  template:
    metadata:
      labels:
        app: my-app-lb
    spec:
      containers:
        - name: my-container
          image: nginx:latest
          ports:
            - containerPort: 80
---
