Projects/Kubernetes-Practice-NextOpsCourse/Chapter-3/sample_ingress_dep_two.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-apache
  template:
    metadata:
      labels:
        app: my-app-apache
    spec:
      containers:
        - name: my-app-apache
          image: httpd:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-apache
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: my-app-apache
